tests/paczka1/fuzzy1/96399765.err
Error in line 3: A748 S33 60,2
Error in line 4: RHq A633 16,2
Error in line 1: 9LKkbe08j S475 33,4
Error in line 14: 9LKkbe08j A748 57,3
Error in line 20: RHq A748 34,7
Error in line 25: yrSGVE S33 63,2
Error in line 17: EPdTrpT S475 63,4
